Fixed text in project cardss overflowing on iPad in sideview

--- a/statics/home.css
+++ b/statics/home.css
@@ -146,6 +146,7 @@ img#avatar {
     color: transparent;
     background-clip: text;
     -webkit-background-clip: text;
+    font-size: 26px;
 
 }
 
